--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <body>
         <p>bendaws.net has been migrated to bendaws.xyz, and I won't really be using this domain. This is only to be a redirect. Read the notice on the redirected page.</p>
-        <a href="https://www.bendaws.xyz">go here pls</a>
+        <a href="https://bendaws.xyz">go here pls</a>
     </body>
 </html>
